// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnmarkedWsNoticeList renders normally with data 1`] = `
<div
  class="pageContent"
>
  <h2
    class="text standard h2 xl normalWeight pageTitle"
  >
    NOSTOJÄRJESTYSILMOITUKSET
  </h2>
  <div>
    <div
      class="container"
    >
      <span>
        Tuloksien lukumäärä: 0
      </span>
      <div
        class="Dropdown-module_root__3ro8_ select select"
      >
        <label
          class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
          for="hds-toggle-button"
          id="hds-label"
        >
          Hakemuksen tila
        </label>
        <div
          class="Dropdown-module_wrapper__1sFxz"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="hds-label hds-toggle-button"
            class="Dropdown-module_buttonDropdown__2xA1D Dropdown-module_dropdown__34HBV"
            id="hds-toggle-button"
            type="button"
          >
            <span
              class="Dropdown-module_buttonLabel__3y4eg"
            >
              Kaikki
            </span>
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Dropdown-module_angleIcon__3-f8N"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="hds-label"
          class="Dropdown-module_menu__3xwA0"
          id="hds-menu"
          role="listbox"
          style="max-height: calc(var(--dropdown-height) * 9);"
          tabindex="-1"
        />
      </div>
    </div>
    <div
      class="tableWrapper"
    >
      <div
        class="table primary"
        role="table"
        style="min-width: 825px;"
      >
        <div
          class="stickyHeaders"
        >
          <div
            class="header mainHeader"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 0px;"
          >
            <div
              class="headerCell"
              colspan="6"
              role="columnheader"
              style="box-sizing: border-box; flex: 825 0 auto; min-width: 0px; width: 825px;"
            >
              Nostojärjestysilmoitukset
            </div>
          </div>
          <div
            class="header"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 0px;"
          >
            <div
              class="headerCell selector"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
            >
              <div
                class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                style="cursor: pointer;"
              >
                <input
                  class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                  id="checkbox"
                  title="Toggle All Rows Selected"
                  type="checkbox"
                  value=""
                />
                <label
                  class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                  for="checkbox"
                />
              </div>
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
            >
              Nimi
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px; cursor: pointer;"
              title="Toggle SortBy"
            >
              PVM
              <div
                class="sortArrowWrapper"
              >
                <svg
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                  >
                    <path
                      d="M0 0h24v24H0z"
                    />
                    <path
                      d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
              </div>
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
            >
              Talvisäilytysalue
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
            >
              Tila
            </div>
            <div
              class="headerCell expander"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
            >
              <button>
                Pienennä kaikki
              </button>
            </div>
          </div>
        </div>
        <div
          role="rowgroup"
        >
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTox"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTox"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTox"
                >
                  Teppo Tulppu
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                06.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToy"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToy"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToy"
                >
                  Aku Ankka
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                06.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToz"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToz"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToz"
                >
                  Hannu Hanhi
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                06.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo1"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo1"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo1"
                >
                  Milla Magia
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                06.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo2"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo2"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo2"
                >
                  Iines Ankka
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                06.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo3"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo3"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo3"
                >
                  Mikki Hiiri
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                06.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo4"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo4"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo4"
                >
                  Roope Ankka
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                06.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo5"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo5"
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZTo5"
                >
                  Kulta-Into Pii
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                06.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToxMA=="
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToxMA=="
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToxMA=="
                >
                  Hansu Hanhi
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                06.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rowWrapper"
          >
            <div
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 0px;"
            >
              <div
                class="tableCell selector"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                    id="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToxMQ=="
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                    for="checkbox-V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToxMQ=="
                  />
                </div>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <a
                  class="internalLink brand"
                  href="/unmarked-ws-notices/V2ludGVyU3RvcmFnZUFwcGxpY2F0aW9uTm9kZToxMQ=="
                >
                  Hessu Hopo
                </a>
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                07.05.2019
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
              >
                Iso-Sarvasto
              </div>
              <div
                class="tableCell"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <span
                  class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_alert__2VR8r status-label_hds-status-label--alert__1ecsX"
                >
                  Odottaa käsittelyä
                </span>
              </div>
              <div
                class="tableCell expander"
                role="cell"
                style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
              >
                <div
                  style="cursor: pointer;"
                  title="Toggle Row Expanded"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv expandArrow"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="pagination"
    >
      <li
        class="prevBtn disabled"
      >
        <a
          aria-disabled="true"
          class="navLink"
          role="button"
          tabindex="0"
        >
          <div
            class="icnBtn"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                  fill="currentColor"
                />
              </g>
            </svg>
            <span
              class="text standard span"
            >
              Edellinen
            </span>
          </div>
        </a>
      </li>
      <li
        class="pageBtn selected"
      >
        <a
          aria-current="page"
          aria-label="Page 1 is your current page"
          class="navLink pageLink active"
          role="button"
          tabindex="0"
        >
          1
        </a>
      </li>
      <li
        class="nextBtn disabled"
      >
        <a
          aria-disabled="true"
          class="navLink"
          role="button"
          tabindex="0"
        >
          <div
            class="icnBtn"
          >
            <span
              class="text standard span"
            >
              Seuraava
            </span>
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M12.586 7.05L14 5.636 20.364 12 14 18.364l-1.414-1.414 3.95-3.95H4v-2h12.535z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`UnmarkedWsNoticeList renders normally without data 1`] = `
<div
  class="pageContent"
>
  <h2
    class="text standard h2 xl normalWeight pageTitle"
  >
    NOSTOJÄRJESTYSILMOITUKSET
  </h2>
  <div>
    <div
      class="container"
    >
      <span>
        Tuloksien lukumäärä: 0
      </span>
      <div
        class="Dropdown-module_root__3ro8_ select select"
      >
        <label
          class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
          for="hds-toggle-button"
          id="hds-label"
        >
          Hakemuksen tila
        </label>
        <div
          class="Dropdown-module_wrapper__1sFxz"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="hds-label hds-toggle-button"
            class="Dropdown-module_buttonDropdown__2xA1D Dropdown-module_dropdown__34HBV"
            id="hds-toggle-button"
            type="button"
          >
            <span
              class="Dropdown-module_buttonLabel__3y4eg"
            >
              Kaikki
            </span>
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Dropdown-module_angleIcon__3-f8N"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="hds-label"
          class="Dropdown-module_menu__3xwA0"
          id="hds-menu"
          role="listbox"
          style="max-height: calc(var(--dropdown-height) * 9);"
          tabindex="-1"
        />
      </div>
    </div>
    <div
      class="tableWrapper"
    >
      <div
        class="table primary"
        role="table"
        style="min-width: 825px;"
      >
        <div
          class="stickyHeaders"
        >
          <div
            class="header mainHeader"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 0px;"
          >
            <div
              class="headerCell"
              colspan="6"
              role="columnheader"
              style="box-sizing: border-box; flex: 825 0 auto; min-width: 0px; width: 825px;"
            >
              Nostojärjestysilmoitukset
            </div>
          </div>
          <div
            class="header"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 0px;"
          >
            <div
              class="headerCell selector"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
            >
              <div
                class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz checkbox"
                style="cursor: pointer;"
              >
                <input
                  class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
                  id="checkbox"
                  title="Toggle All Rows Selected"
                  type="checkbox"
                  value=""
                />
                <label
                  class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
                  for="checkbox"
                />
              </div>
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
            >
              Nimi
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px; cursor: pointer;"
              title="Toggle SortBy"
            >
              PVM
              <div
                class="sortArrowWrapper"
              >
                <svg
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                  >
                    <path
                      d="M0 0h24v24H0z"
                    />
                    <path
                      d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
              </div>
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 112.5 0 auto; min-width: 0px; width: 112.5px;"
            >
              Talvisäilytysalue
            </div>
            <div
              class="headerCell"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
            >
              Tila
            </div>
            <div
              class="headerCell expander"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 150 0 auto; min-width: 0px; width: 150px;"
            >
              <button>
                Pienennä kaikki
              </button>
            </div>
          </div>
        </div>
        <div
          role="rowgroup"
        >
          <div
            class="rowWrapper"
            role="row"
          >
            <div
              class="tableCell"
            >
              Ei tietoja
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="pagination"
    >
      <li
        class="prevBtn disabled"
      >
        <a
          aria-disabled="true"
          class="navLink"
          role="button"
          tabindex="0"
        >
          <div
            class="icnBtn"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                  fill="currentColor"
                />
              </g>
            </svg>
            <span
              class="text standard span"
            >
              Edellinen
            </span>
          </div>
        </a>
      </li>
      <li
        class="pageBtn selected"
      >
        <a
          aria-current="page"
          aria-label="Page 1 is your current page"
          class="navLink pageLink active"
          role="button"
          tabindex="0"
        >
          1
        </a>
      </li>
      <li
        class="nextBtn disabled"
      >
        <a
          aria-disabled="true"
          class="navLink"
          role="button"
          tabindex="0"
        >
          <div
            class="icnBtn"
          >
            <span
              class="text standard span"
            >
              Seuraava
            </span>
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M12.586 7.05L14 5.636 20.364 12 14 18.364l-1.414-1.414 3.95-3.95H4v-2h12.535z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
